🐛 Fix Description page css classname overlap issue

--- a/src/pages/Description/styles/section2/section2.css
+++ b/src/pages/Description/styles/section2/section2.css
@@ -662,10 +662,10 @@ img {
 }
 /*  stop .review */
 .review {
-  border-bottom: none !important;
-  border-top: none !important;
-  border-left: none !important;
-  border-right: none !important;
+  border-bottom: none;
+  border-top: none;
+  border-left: none;
+  border-right: none;
 }
 /*  stop ul */
 div.user-prof {
